src/objects/CustomForecast__c.object
<CustomObject>
    <fields>
        <fullName>FYFQ__c</fullName>
        <description>Fiscal Year Fiscal Quarter</description>
        <label>FYFQ</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowingWeekCommit__c</fullName>
        <label>Following Week Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastEdited__c</fullName>
        <description>Date and time the user made last edit to data</description>
        <label>Last Edited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Submitted</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month1Commit__c</fullName>
        <label>Month 1 Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month2Commit__c</fullName>
        <label>Month 2 Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month3Commit__c</fullName>
        <label>Month 3 Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QuarterCommit__c</fullName>
        <label>Qtr Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QuarterGut__c</fullName>
        <label>Qtr Gut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QuarterUpside__c</fullName>
        <label>Qtr Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubmittedOn__c</fullName>
        <description>Date and time of submission</description>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpcomingWeekCommit__c</fullName>
        <label>Upcoming Week Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Custom Forecasts</relationshipLabel>
        <relationshipName>CustomForecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YYWW__c</fullName>
        <description>Calendar Year and Week #</description>
        <label>YYWW</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Custom Forecast</label>
    <nameField>
        <displayFormat>CF#{YY}{MM}{DD}-{0}</displayFormat>
        <label>Custom Forcast NO.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Forecast</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>